Bug 162339 - MySQL/MariaDB direct connection: Table with spaces in table name couldn't be deleted by GUI
Summary: MySQL/MariaDB direct connection: Table with spaces in table name couldn't be ...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
7.4 all versions
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: target:25.2.0 target:24.8.1
Keywords:
Depends on:
Blocks:
 
Reported: 2024-08-04 06:35 UTC by Robert Großkopf
Modified: 2024-08-06 10:12 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Großkopf 2024-08-04 06:35:08 UTC
Open a connection to MySQL/MariaDB database with direct connector.
Create a table through GUI and name the table with spaces, for example 
"My new Table".
Table will be created without any problems.
Now try to delete the table through GUI.
Impossible to delete the table through GUI.
Seems GUI won't mask the table name when trying to drop the table.

Same with JDBC connection works well.
Same through Tools → SQL will work also (DROP TABLE "My new Table").

This bug appears in all LO-versions with direct driver here. So seems it never worked.

By the way: Trying to delete the table through GUI in LO 24.8.0.2 leads to crash from whole LO…
Comment 1 Julien Nabet 2024-08-04 08:25:06 UTC
On pc Debian x86-64 with master sources updated today, I don't have a crash but an error.
But there's definitely something wrong here.
Comment 2 Julien Nabet 2024-08-04 08:25:25 UTC
I gave a try with https://gerrit.libreoffice.org/c/core/+/171457
Comment 3 Commit Notification 2024-08-04 12:43:57 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/bf2c4cead1980c2e36fa9d51b704d2753e517edf

tdf#162339: MariaDB: Table with spaces in table name couldn't be deleted by GUI

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Julien Nabet 2024-08-04 12:46:05 UTC
Robert: before I cherry-pick this for 24.8, I'd be interested in having some feedback from you (for example, if you still have a crash, if it works...)
Comment 5 Shlomo belleli 2024-08-05 16:37:05 UTC
I didn't used this option along time ago
Comment 6 Robert Großkopf 2024-08-06 05:49:58 UTC
Tested again with
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ec5235ddfd62ca490d13fbc2c91e740a44f9950e
CPU threads: 6; OS: Linux 6.4; UI render: default; VCL: kf5 (cairo+xcb)
Locale: de-DE (de_DE.UTF-8); UI: de-DE
Calc: threaded

(2024-08-06)

Works well now, no crash here.

Thanks Julien!
Comment 7 Julien Nabet 2024-08-06 07:26:14 UTC
Thank you Robert for the feedback.

Cherry-pick for 24.8 branch waiting for review here:
https://gerrit.libreoffice.org/c/core/+/171528
Comment 8 Commit Notification 2024-08-06 10:12:50 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/1d4a961389c31480b85f451b836481965698134c

tdf#162339: MariaDB: Table with spaces in table name couldn't be deleted by GUI

It will be available in 24.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.