tdf#162339: MariaDB: Table with spaces in table name couldn't be deleted by GUI

Use ::dbtools::qualifiedNameComponents to retrieve elements of table name (catalog/schema/table)
Use ::dbtools::composeTableName to compose the full table name

Change-Id: Ia6ebc1a46a4222315e43909356fb8c1d36990419
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/171457
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
Tested-by: Jenkins